Lexer: refactor & simplify